--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Paradigm Shift by HTML5 UP</title>
+		<title>Bryce Lednar</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="" />
@@ -23,7 +23,7 @@
 						<header>
 							<h1>Bryce Lednar</h1>
 							<!-- Section -->
-							<p>Product Manager, SF CA</p>
+							<p>Product Manager | SF CA</p>
 							<ul class="actions">
 								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
 							</ul>
@@ -59,7 +59,7 @@
 								<li class="icon solid fa-code">Data Analysis & Strategy</li>
 								<li class="icon solid fa-cog">Business Operations</li>
 							</ul>
-							<p>How else I can help: if you are a startup working on your investor pitch, I can provide feedback on your content and delivery. Feel free to reach out to me!</p>
+							<p>If you are a startup working on your investor pitch, I can provide feedback on your content and delivery. Feel free to reach out to me!</p>
 						</div>
 					</section>
 
@@ -80,7 +80,7 @@
 									</header>
 									<div class="content">
 										<div class="gallery">
-											<a href="https://cdn.corporate.walmart.com/ac/ae/4ebcbca54005978f4592066dc414/quid-wm-family-8.5x11_2-23_CEO%20FINAL%20(1).pdf"><img src="images/gallery/thumbs/QuidThumb1.jpg" alt="" /></a>
+											<a href="https://cdn.corporate.walmart.com/ac/ae/4ebcbca54005978f4592066dc414/quid-wm-family-8.5x11_2-23_CEO%20FINAL%20(1).pdf"><img src="images/gallery/thumbs/QuidThumb1.png" alt="" /></a>
 											<a href="https://cdn.corporate.walmart.com/f3/12/8097315049c8b2faf52df91605c6/quid-wm-family-infographic-2-23-final.pdf"><img src="images/gallery/thumbs/QuidThumb2.png" alt="" /></a>
 										</div>
 									</div>
@@ -91,12 +91,12 @@
 									<header>
 										<h3>PREMISE | BUSINESS OPERATIONS </h3>
 										<p>Premise is data and analytics company that delivers macroeconomic insights using data science and a global network of contributors. Premise has raised $60M+ from Google Ventures and Andreessen Horowitz, among others.</p>
-										<p>I led a 10-person cross-functional team spanning Product, Engineering, Growth, Solutions Engineering, and Operations to launch a mobile product to improve patient adherence to HIV medications in Kenya with funding from the U.S. Department of State. [impact of the intervention]</p>
+										<p>I led a 10-person cross-functional team spanning Product, Engineering, Growth, Solutions Engineering, and Operations to launch a mobile product to improve patient adherence to HIV medications in Kenya with funding from the U.S. Department of State.</p>
 									</header>
 									<div class="content">
 										<div class="gallery">
-											<a href="https://medium.com/@premisedata/our-first-patient-adherence-product-launches-in-kenya-8b56789c20b7"><img src="images/gallery/thumbs/06.jpg" alt="" /></a>
-											<a href="https://medium.com/@premisedata/our-first-patient-adherence-product-launches-in-kenya-8b56789c20b7"><img src="images/gallery/thumbs/07.jpg" alt="" /></a>
+											<a href="https://medium.com/@premisedata/our-first-patient-adherence-product-launches-in-kenya-8b56789c20b7"><img src="images/gallery/thumbs/premiseThumb1.png" alt="" /></a>
+											<a href="https://medium.com/@premisedata/our-first-patient-adherence-product-launches-in-kenya-8b56789c20b7"><img src="images/gallery/thumbs/premiseThumb2.jpg" alt="" /></a>
 										</div>
 									</div>
 								</section>
@@ -110,8 +110,8 @@
 									</header>
 									<div class="content">
 										<div class="gallery">
-											<a href="https://www.facebook.com/LakeVictoriaAC/" class="portrait"><img src="images/gallery/thumbs/lvacThumb2.jpg.jpg" alt="" /></a>
-											<a href="https://www.facebook.com/LakeVictoriaAC/" class="portrait"><img src="images/gallery/thumbs/lvacThumb1.jpg.jpg" alt="" /></a>
+											<a href="https://www.facebook.com/LakeVictoriaAC/" class="portrait"><img src="images/gallery/thumbs/lvacThumb2.jpg" alt="" /></a>
+											<a href="https://www.facebook.com/LakeVictoriaAC/" class="portrait"><img src="images/gallery/thumbs/lvacThumb1.jpg" alt="" /></a>
 										</div>
 									</div>
 								</section>
