--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 						<header>
 							<h1>Bryce Lednar</h1>
 							<!-- Section -->
-							<p>Product Manager | SF CA</p>
+							<p>Product Manager | SF, CA</p>
 							<ul class="actions">
 								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
 							</ul>
@@ -77,6 +77,7 @@
 										<h3>QUID | CLIENT SERVICES DIRECTOR</h3>
 										<p>Quid is an artificial intelligence technology company focused on text analytics that has raised $100M in funding from investors including Founders Fund and Atomico. Quid serves Fortune 500, Agency, and Consulting customers including Walmart, Brunswick, and BCG.</p>
 										<p>At Quid, I worked with a team of data scientists and analysts to help Walmart gain new data-driven perspectives on American families by identifying trends across forum discussions, media coverage, venture funding, and Walmart transaction data. A portion of the findings were released in a public report endorsed by Walmart's CEO.</p>
+										<p><a href="https://cdn.corporate.walmart.com/ac/ae/4ebcbca54005978f4592066dc414/quid-wm-family-8.5x11_2-23_CEO%20FINAL%20(1).pdf">Link to the report</a></p>
 									</header>
 									<div class="content">
 										<div class="gallery">
@@ -92,6 +93,7 @@
 										<h3>PREMISE | BUSINESS OPERATIONS </h3>
 										<p>Premise is data and analytics company that delivers macroeconomic insights using data science and a global network of contributors. Premise has raised $60M+ from Google Ventures and Andreessen Horowitz, among others.</p>
 										<p>I led a 10-person cross-functional team spanning Product, Engineering, Growth, Solutions Engineering, and Operations to launch a mobile product to improve patient adherence to HIV medications in Kenya with funding from the U.S. Department of State.</p>
+										<p><a href="https://medium.com/@premisedata/our-first-patient-adherence-product-launches-in-kenya-8b56789c20b7">Read more about this project</a></p>
 									</header>
 									<div class="content">
 										<div class="gallery">
@@ -107,6 +109,7 @@
 										<h3>LAKE VICTORIA A.C. | FOUNDER</h3>
 										<p>The Lake Victoria Athletic Club is a rowing club based in Kenya. We support competitive rowing in East Africa and lead community-initiatives focused on health, environment, and water safety.</p>
 										<p>LVAC rower Jack Owako holds the national title in Kenya for the Men's Heavyweight Single and finished 8th in the 2019 African Continental Olympic Qualification Regatta.</p>
+										<p><a href="https://www.facebook.com/LakeVictoriaAC/">Follow us on Facebook</a></p>
 									</header>
 									<div class="content">
 										<div class="gallery">
